# any2md

./: .gitignore  CLAUDE.md  GOAL.md  GOALS.md  Makefile  README.md  WORKLOG.md  benchmark_models.py  doc2md.py  download_models.py  html2md.py  img2md.py  llms.txt  pdf2md.py  pyproject.toml  pytest.ini  quant_test.py  requirements.txt  rst2md.py  test_benchmark.py  test_doc2md.py  test_html2md.py  test_img2md.py  test_pdf2md.py  test_rst2md.py  test_web2md.py  test_yt2md.py  web2md.py  whisper_benchmark.py  worklog-archive.md  worklog.md  yt2md.py
.github/workflows/: bump-tap.yml
scripts/: benchmark_models.py  download_models.py
src/any2md/: __init__.py  cli.py  common.py  csv.py  data.py  db.py  doc.py  eml.py  html.py  img.py  man.py  nb.py  org.py  pdf.py  repo.py  rst.py  speaker.py  sub.py  tex.py  web.py  yt.py
src/tomd/: __init__.py  cli.py  doc.py  html.py  img.py  pdf.py  rst.py  web.py  yt.py
test/: create_fixtures.py  test_inference.py
tests/: conftest.py  create_fixtures.py  test_cli.py  test_common.py  test_doc.py  test_html.py  test_img.py  test_inference.py  test_integration.py  test_pdf.py  test_repo.py  test_rst.py  test_speaker.py  test_speaker_cli.py  test_web.py  test_yt.py
tests/fixtures/: sample.docx  sample.html  sample.pptx  sample.rst  sample.xlsx
