[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "any2md"
version = "0.2.3"
description = "Media to Markdown toolkit for Apple Silicon"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Joseph Schlesinger", email = "joe@schlesinger.io" },
]
dependencies = [
    "typer>=0.9.0",
    "typing-extensions",
]

[project.optional-dependencies]
stt = ["mlx-audio[stt]>=0.4.0", "yt-dlp>=2023.11.14"]
pdf = ["pymupdf4llm>=0.2.0"]
img = ["mlx-vlm"]
web = ["mlx-lm", "httpx"]
doc = ["markitdown>=0.1.0", "mammoth>=1.12.0"]
rst = []
speaker = ["wespeaker", "sqlite-vec"]
all = ["any2md[stt,pdf,img,web,doc,speaker]"]

[project.scripts]
any2md = "any2md.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/any2md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: requires real model inference or network access (use -m integration to run)",
    "slow: takes more than 10 seconds",
]
